--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    uses: silinternational/workflows/.github/workflows/terraform.yml@main
+    uses: sil-org/workflows/.github/workflows/terraform.yml@main
     with:
       # validate with the earliest version allowed by required_version in versions.tf
       terraform-version: '~> 1.0'
